--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -27,7 +27,15 @@ vi:
   static_pages:
     home:
       title: "Trang chủ"
+  shared:
+    stats:
+      post: "Bài viết"
+      following: "Đang theo dõi"
   users:
+    index:
+      title: "Danh sách người dùng"
+    user:
+      view_detail: "Xem chi tiết"
     new:
       title: "Đăng ký"
       user_name: "Họ và tên"
@@ -42,6 +50,13 @@ vi:
     create:
       success: "Tạo tài khoản thành công"
       failed: "Taọ tài khoản thất bại"
+    follow:
+      submit: "Theo dõi"
+    unfollow:
+      submit: "Hủy theo dõi"
+    follower_count:
+      follower: "Người theo dõi"
+    required_login: "Bạn cần đăng nhập trước"
   sessions:
     new:
       title: "Đăng nhập"
@@ -77,9 +92,26 @@ vi:
       post_title: "Tiêu đề"
       post_content: "Nội dung"
       view_mode: "Chế độ xem"
+      submit: "Lưu chỉnh sửa"
+    update:
+      success: "Chỉnh sửa thành công"
+      failed: "Chỉnh sửa thất bại"
+    destroy:
+      success: "Xóa thành công"
+      failed: "Xóa thất bại"
+    post:
+      confirm_delete: "Bạn có chắc chắn muốn xóa bài viết này?"
+    form:
+      post_title: "Tiêu đề"
+      post_content: "Nội dung"
+      view_mode: "Chế độ xem"
   post:
     status:
       private: "Private"
       public: "Public"
     read_more: "Xem thêm"
     edit: "Chỉnh sửa"
+  relationships:
+    create:
+    destroy:
+      user_not_found: "User not found"
